Use Python logging configuration

--- a/gpio-example.conf
+++ b/gpio-example.conf
@@ -6,3 +6,33 @@ court4 = gpio GPIO0_BASE 27
 court5 = gpio GPIO2_BASE 23
 court6 = gpio GPIO2_BASE 22
 
+
+; Logging configuration
+
+[formatters]
+keys=simple
+
+[formatter_simple]
+format=%(name)s:%(levelname)s: %(message)s
+
+[handlers]
+keys=console
+
+[handler_console]
+class=StreamHandler
+level=NOTSET
+formatter=simple
+args=(sys.stdout,)
+
+[loggers]
+keys=root,pba
+
+[logger_root]
+level=NOTSET
+handlers=console
+
+[logger_pba]
+level=NOTSET
+handlers=console
+propagate=0
+qualname=pba
