--- a/test-example.conf
+++ b/test-example.conf
@@ -6,3 +6,33 @@ court4 = dummy
 court5 = dummy
 court6 = dummy
 
+
+; Logging configuration
+
+[loggers]
+keys=root,sprinkler_config
+
+[logger_root]
+level=DEBUG
+handlers=console
+
+[logger_sprinkler_config]
+level=DEBUG
+handlers=console
+propagate=0
+qualname=sprinkler_config
+
+[handlers]
+keys=console
+
+[handler_console]
+class=StreamHandler
+level=DEBUG
+formatter=simple
+args=(sys.stdout,)
+
+[formatters]
+keys=simple
+
+[formatter_simple]
+format=%(name)s:%(levelname)s: %(message)s
