File reorganisation: Split into sub-packages core and client

--- a/test-example.conf
+++ b/test-example.conf
@@ -10,17 +10,17 @@ court6 = dummy
 ; Logging configuration
 
 [loggers]
-keys=root,sprinkler_config
+keys=root,pba
 
 [logger_root]
 level=DEBUG
 handlers=console
 
-[logger_sprinkler_config]
+[logger_pba]
 level=DEBUG
 handlers=console
 propagate=0
-qualname=sprinkler_config
+qualname=pba
 
 [handlers]
 keys=console
