--- a/gpio-example.conf
+++ b/gpio-example.conf
@@ -9,30 +9,30 @@ court6 = gpio GPIO2_BASE 22
 
 ; Logging configuration
 
-[formatters]
-keys=simple
+[loggers]
+keys=root,pba
 
-[formatter_simple]
-format=%(name)s:%(levelname)s: %(message)s
+[logger_root]
+level=DEBUG
+handlers=console
+
+[logger_pba]
+level=DEBUG
+handlers=console
+propagate=0
+qualname=pba
 
 [handlers]
 keys=console
 
 [handler_console]
 class=StreamHandler
-level=NOTSET
+level=DEBUG
 formatter=simple
 args=(sys.stdout,)
 
-[loggers]
-keys=root,pba
+[formatters]
+keys=simple
 
-[logger_root]
-level=NOTSET
-handlers=console
-
-[logger_pba]
-level=NOTSET
-handlers=console
-propagate=0
-qualname=pba
+[formatter_simple]
+format=%(name)s:%(levelname)s: %(message)s
