Support inverted GPIO outputs
To support inverted GPIO outputs
 - change the configuration format (drop base constants, add inversion flag)
 - unify configuration by re-using the pba config for the gpio-config tool

--- a/gpio-example.conf
+++ b/gpio-example.conf
@@ -1,10 +1,13 @@
 [sprinklers]
-court1 = gpio GPIO2_BASE 25
-court2 = gpio GPIO2_BASE 24
-court3 = gpio GPIO2_BASE 1
-court4 = gpio GPIO0_BASE 27
-court5 = gpio GPIO2_BASE 23
-court6 = gpio GPIO2_BASE 22
+;        sprinkler type (dummy, gpio)?
+;             for gpio: IO number?
+;                for gpio: inverted (true, false)?
+court1 = gpio 89 false
+court2 = gpio 88 false
+court3 = gpio 65 false
+court4 = gpio 27 false
+court5 = gpio 87 false
+court6 = gpio 86 false
 
 
 ; Logging configuration
